--- a/css/02-box-model/index.html
+++ b/css/02-box-model/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
-    <h1>I am boring text</h1>
-    
+    <div>
+      <h1>
+        <i class="fa fa-recycle" aria-hidden="true"></i>
+        I am boring text
+      </h1>
+    </div>
   </body>
 </html>
